--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Jave Been</h1>
+      <h1>Java Been</h1>
     </header>
     <nav>
       <ul class="nav justify-content-end">
