Changing Font + referencing index .

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Home</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href='http://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="javabeen.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
     <nav>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-            <a class="nav-link active" href="javabeen.html">Home</a></li>
+            <a class="nav-link active" href="index.html">Home</a></li>
         <li class="nav-item">
             <a class="nav-link active" href="menujavabeen.html">Menu</a></li>
         <li class="nav-item">
