--- a/shopjavabeen.html
+++ b/shopjavabeen.html
@@ -11,7 +11,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="javabeen.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="menujavabeen.html">Menu</a></li>
         <li><a href="locationjavabeen.html">Location</a></li>
         <li><a href="shopjavabeen.html">Shop</a></li>
