--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href='http://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="javabeen.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
   <div class="container">
-    <header>
-      <h1>Welcome to My Website</h1>
-    </header>
     <nav>
       <ul class="nav justify-content-end">
         <li class="nav-item">
@@ -20,16 +18,24 @@
         <li class="nav-item">
             <a class="nav-link active" href="locationjavabeen.html">Location</a></li>
         <li class="nav-item">
-            <a class="nav-link active" href="shopjavabeen.html">Shop</a></li>
+            <a class="nav-link active" id="shopButton" href="shopjavabeen.html">Shop</a></li>
         <li class="nav-item">
             <a class="nav-link active" href="contactjavabeen.html">Contact</a></li>
         <li class="nav-item">
             <a class="nav-link active" href="aboutjavabeen.html">About</a></li>
       </ul>
-    </nav>
+    </nav>   
     <section>
-      <h2>Welcome to the Home Page</h2>
-      <!-- Home page content goes here -->
+      <header>
+        <h1>Aliquam a aliquet</h1>
+      </header>
+  
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu ornare dolor, 
+          sed venenatis leo. Integer sed metus euismod, laoreet neque non, venenatis lacus. Nullam tincidunt id erat et blandit. Nulla vitae elementum urna.</h2>
+
+          <button id="shakeButton"> Order Now</button>
+          <script src="javabeen.js"></script>
+        <!-- Home page content goes here -->
     </section>
     <footer>
         <ul class="nav justify-content-center">
