Changed background image

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <h1>Aliquam a aliquet</h1>
       </header>
   
-        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu ornare dolor, 
-          sed venenatis leo. Integer sed metus euismod, laoreet neque non, venenatis lacus. Nullam tincidunt id erat et blandit. Nulla vitae elementum urna.</h2>
+        <p id="homepagetext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu ornare dolor, 
+          sed venenatis leo. Integer sed metus euismod, laoreet neque non, venenatis lacus. Nullam tincidunt id erat et blandit. Nulla vitae elementum urna.</p>
 
           <button id="shakeButton"> Order Now</button>
           <script src="javabeen.js"></script>
