--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-  <div class="container">
+  <div class="containerHome">
     <nav>
       <ul class="nav justify-content-end">
         <li class="nav-item">
@@ -25,10 +25,9 @@
             <a class="nav-link active" href="aboutjavabeen.html">About</a></li>
       </ul>
     </nav>   
+
     <section>
-      <header>
-        <h1>Aliquam a aliquet</h1>
-      </header>
+      <header><h1>Aliquam a aliquet</h1></header>
   
         <p id="homepagetext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu ornare dolor, 
           sed venenatis leo. Integer sed metus euismod, laoreet neque non, venenatis lacus. Nullam tincidunt id erat et blandit. Nulla vitae elementum urna.</p>
@@ -37,10 +36,12 @@
           <script src="javabeen.js"></script>
         <!-- Home page content goes here -->
     </section>
+
     <footer>
+      <nav>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Social Link</a>
+              <a class="nav-link" href="#">Social Link</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Social Link</a>
@@ -61,6 +62,7 @@
                 <a class="nav-link" href="#">FAQ</a>
             </li>
           </ul>
+        </nav>
       <p>&copy; 2016 Company Name. All rights reserved</p>
     </footer>
   </div>
