--- a/aboutjavabeen.html
+++ b/aboutjavabeen.html
@@ -3,29 +3,95 @@
 <head>
   <title>About</title>
   <link rel="stylesheet" href="javabeen.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <style>
+    @media (max-width: 767px) {
+     .navbar-collapse .navbar-nav .nav-link {
+       color: #883E24;
+     }
+   }
+ </style>
+  <!--Font Awsome style sheet-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
-<body>
-  <div class="container">
-    <header>
-      <h1>About Us</h1>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="menujavabeen.html">Menu</a></li>
-        <li><a href="locationjavabeen.html">Location</a></li>
-        <li><a href="shopjavabeen.html">Shop</a></li>
-        <li><a href="contactjavabeen.html">Contact</a></li>
-        <li><a href="aboutjavabeen.html">About</a></li>
-      </ul>
-    </nav>
+<body class="standardbody">
+  <div class="containerContact">
+    <nav class="navbar navbar-expand-md navbar-dark">
+      <a class="navbar-brand" href="#"></a>  <!-- Add the logo here  -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+              <a class="nav-link " href="index.html">Home</a></li>
+          <li class="nav-item">
+              <a class="nav-link " href="menujavabeen.html">Menu</a></li>
+          <li class="nav-item">
+              <a class="nav-link " href="locationjavabeen.html">Location</a></li>
+          <li class="nav-item">
+              <a class="nav-link " id="shopButton" href="shopjavabeen.html">Shop</a></li>
+          <li class="nav-item">
+              <a class="nav-link " href="contactjavabeen.html">Contact</a></li>
+          <li class="nav-item">
+              <a class="nav-link active" href="aboutjavabeen.html">About</a></li>
+        </ul>
+        </div>
+    </nav>   
+
     <section>
-      <h2>Check Out Our Menu</h2>
-      <!-- Menu page content goes here -->
+
+      <div class="grid-containerabout">
+        <div id="aboutpageimage">
+          <img src="menubakery.png">
+        </div>
+
+        <div id="aboutpagecompany">
+          <h1>Company History</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu ornare dolor,
+             sed venenatis leo. Integer sed metus euismod, laoreet neque non, venenatis lacus. Nullam tincidunt id erat et blandit. Nulla vitae elementum urna.</p>
+        </div>
+          
+        <div id="aboutpagehistory">
+          <h1>Our Vision</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu ornare dolor,
+             sed venenatis leo. Integer sed metus euismod, laoreet neque non, venenatis lacus. Nullam tincidunt id erat et blandit. Nulla vitae elementum urna.</p>
+        </div>
+      </div>
     </section>
-    <footer>
+
+    <footer  id="footerContainer">
+      <nav>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Social Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Social Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Privacy</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Support</a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Careers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Terms</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">FAQ</a>
+            </li>
+          </ul>
+        </nav>
       <p>&copy; 2023 My Website. All rights reserved.</p>
     </footer>
   </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
