--- a/index.html
+++ b/index.html
@@ -2,28 +2,43 @@
 <html>
 <head>
   <title>Home</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href='http://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="javabeen.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <style>
+     @media (max-width: 767px) {
+      .navbar-collapse .navbar-nav .nav-link {
+        color: #883E24;
+      }
+    }
+  </style>
+  <!--Font Awsome style sheet-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
-<body>
+<body class="standardbody">
   <div class="containerHome">
-    <nav>
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a></li>
-        <li class="nav-item">
-            <a class="nav-link active" href="menujavabeen.html">Menu</a></li>
-        <li class="nav-item">
-            <a class="nav-link active" href="locationjavabeen.html">Location</a></li>
-        <li class="nav-item">
-            <a class="nav-link active" id="shopButton" href="shopjavabeen.html">Shop</a></li>
-        <li class="nav-item">
-            <a class="nav-link active" href="contactjavabeen.html">Contact</a></li>
-        <li class="nav-item">
-            <a class="nav-link active" href="aboutjavabeen.html">About</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-md navbar-dark">
+      <a class="navbar-brand" href="#"></a>  <!-- Add the logo here  -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+              <a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item">
+              <a class="nav-link " href="menujavabeen.html">Menu</a></li>
+          <li class="nav-item">
+              <a class="nav-link " href="locationjavabeen.html">Location</a></li>
+          <li class="nav-item">
+              <a class="nav-link " id="shopButton" href="shopjavabeen.html">Shop</a></li>
+          <li class="nav-item">
+              <a class="nav-link " href="contactjavabeen.html">Contact</a></li>
+          <li class="nav-item">
+              <a class="nav-link " href="aboutjavabeen.html">About</a></li>
+        </ul>
+        </div>
     </nav>   
 
     <section>
@@ -37,7 +52,7 @@
         <!-- Home page content goes here -->
     </section>
 
-    <footer>
+    <footer id="footerContainer">
       <nav>
         <ul class="nav justify-content-center">
             <li class="nav-item">
@@ -63,11 +78,11 @@
             </li>
           </ul>
         </nav>
-      <p>&copy; 2016 Company Name. All rights reserved</p>
+      <p>&copy; 2023 My Website. All rights reserved</p>
     </footer>
   </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
