--- a/menujavabeen.html
+++ b/menujavabeen.html
@@ -33,7 +33,7 @@
               <a class="nav-link " href="locationjavabeen.html">Location</a></li>
           <li class="nav-item">
               <a class="nav-link" id="shopButton" href="shopjavabeen.html">Shop</a></li>
-          <li class="nav-item"
+          <li class="nav-item">
               <a class="nav-link " href="contactjavabeen.html">Contact</a></li>
           <li class="nav-item">
               <a class="nav-link " href="aboutjavabeen.html">About</a></li>
