--- a/locationjavabeen.html
+++ b/locationjavabeen.html
@@ -15,10 +15,10 @@
   <!--Font Awsome style sheet-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
-<body class="standardbody">
+<body class="standardbody" style="background-image: url(Location-BG.gif)">
   <div class="containerHome">
     <nav class="navbar navbar-expand-md navbar-dark">
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="Javabeen dark logo.jpg"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
