--- a/shopjavabeen.html
+++ b/shopjavabeen.html
@@ -18,7 +18,11 @@
 <body class="bodyshop standardbody" style="background-image: url(Shop-BG.gif)">
   <div class="containerHome">
     <nav class="navbar navbar-expand-md navbar-dark">
-      <a class="navbar-brand" href="Javabeen dark logo.jpg"></a>  <!-- Add the logo here  -->
+      <a class="navbar-brand" href="index.html">
+        <div class="logo-image">
+          <img src="javabeendark.gif" class="img-fluid">
+    </div>
+  </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,15 +53,15 @@
           <button>Browse All</button>
         </div>
         <div id="shopbakery">
-        <img src="tempimage.png">
+        <img src="Bakery-Shop.gif">
         </div>
           
         <div id="shopcoffee">
-          <img src="tempimage.png">
+          <img src="Coffee-Shop.gif">
         </div>
 
         <div id="shophotchocolate">
-          <img src="tempimage.png">
+          <img src="Hot-Coco-Shop.gif">
         </div>
       </div>
       
@@ -83,32 +87,32 @@
       <div class="grid-containershopoptions">
 
         <div id="croissant">
-          <img src="anothertemp.png">
+          <img src="French-Butter-Croissant.gif">
           <h1>French Butter Croissant</h1>
         </div>
 
         <div id="espresso">
-          <img src="anothertemp.png">
+          <img src="Espresso.gif">
           <h1>Espresso</h1>
         </div>
 
         <div id="chocolatecaliente1">
-          <img src="anothertemp.png">
+          <img src="Chocolate-Caliente.gif">
           <h1>Chocolate Caliente</h1>
         </div>
 
         <div id="chocolatecaliente2">
-          <img src="anothertemp.png">
+          <img src="Chocolate-Caliente.gif">
           <h1>Chocolate Caliente</h1>
         </div>
 
         <div id="chocolatecaliente3">
-          <img src="anothertemp.png">
+          <img src="Chocolate-Caliente.gif">
           <h1>Chocolate Caliente</h1>
         </div>
 
         <div id="chocolatecaliente4">
-          <img src="anothertemp.png">
+          <img src="Chocolate-Caliente.gif">
           <h1>Chocolate Caliente</h1>
         </div>
 
