--- a/aboutjavabeen.html
+++ b/aboutjavabeen.html
@@ -18,7 +18,11 @@
 <body class="standardbody" style="background-image: url(About-BG.gif)">
   <div class="containerContact">
     <nav class="navbar navbar-expand-md navbar-dark">
-      <a class="navbar-brand" href="Javabeen dark logo.jpg"></a>  <!-- Add the logo here  -->
+      <a class="navbar-brand" href="index.html">
+        <div class="logo-image">
+          <img src="javabeendark.gif" class="img-fluid">
+    </div>
+       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,7 +48,7 @@
 
       <div class="grid-containerabout">
         <div id="aboutpageimage">
-          <img src="menubakery.png">
+          <img src="About-img2.gif">
         </div>
 
         <div id="aboutpagecompany">
