--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 <body class="standardbody" style="background-image: url(Home-BG.gif)">
   <div class="containerHome">
     <nav class="navbar navbar-expand-md navbar-dark">
-      <a class="navbar-brand" href="Javabeen dark logo.jpg"></a>  <!-- Add the logo here  -->
+      <a class="navbar-brand" href="index.html">
+        <div class="logo-image">
+          <img src="javabeendark.gif" class="img-fluid">
+    </div>
+  </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,8 +51,11 @@
         <p id="homepagetext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu ornare dolor, 
           sed venenatis leo. Integer sed metus euismod, laoreet neque non, venenatis lacus. Nullam tincidunt id erat et blandit. Nulla vitae elementum urna.</p>
 
-          <button id="shakeButton"> Order Now</button>
+          <button id="shakeButton" href="shopjavabeen.html"> Order Now </button>
           <script src="javabeen.js"></script>
+          <div>
+            <img src="Cup-Leaf.gif">
+          </div>
         <!-- Home page content goes here -->
     </section>
 
