--- a/locationjavabeen.html
+++ b/locationjavabeen.html
@@ -18,7 +18,11 @@
 <body class="standardbody" style="background-image: url(Location-BG.gif)">
   <div class="containerHome">
     <nav class="navbar navbar-expand-md navbar-dark">
-      <a class="navbar-brand" href="Javabeen dark logo.jpg"></a>
+      <a class="navbar-brand" href="index.html">
+      <div class="logo-image">
+        <img src="javabeendark.gif" class="img-fluid">
+  </div>
+     </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,7 +49,7 @@
     <section> 
         <div class="grid-container">
           <div>
-            <img src="location.png">
+            <img src="Location-Map.gif">
           </div>
           <div class="locationDescription">
             <header> <h1>Location</h1> </header>
