--- a/menujavabeen.html
+++ b/menujavabeen.html
@@ -19,7 +19,11 @@
 <body class="standardbody" style="background-image: url(Menu-BG.gif)">
   <div class="containerHome">
     <nav class="navbar navbar-expand-md navbar-dark">
-      <a class="navbar-brand" href="Javabeen light logo.jpg"></a>  <!-- Add the logo here  -->
+      <a class="navbar-brand" href="index.html">
+        <div class="logo-image">
+          <img src="javabeenlight.gif" class="img-fluid">
+    </div>
+  </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,15 +48,15 @@
 
       <div class="grid-container" id="gridMenu">
         <div>
-          <img src="menubakery.png">
+          <img src="Bakery-Menu.gif">
         </div>
 
         <div>
-          <img src="menucoffee.png">
+          <img src="Coffee-Menu.gif">
         </div>
           
         <div>
-          <img src="menuhotcocoa.png">
+          <img src="Hot-Coco-Menu.gif">
         </div>
       </div>
 
